--- a/pages/nuevapagina.html
+++ b/pages/nuevapagina.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Nueva pagina</h1>
     <h2>Un titulo</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium nihil repellendus omnis neque laboriosam quasi officiis alias libero corrupti quod odit delectus obcaecati ratione id est ullam, incidunt reiciendis eos vero! Officia aperiam, eveniet perferendis consequuntur, harum accusamus rem sequi nobis optio similique laborum. Molestias qui nulla sunt, maiores quasi deserunt. Odio consequatur distinctio doloribus sequi aperiam delectus. Fuga maxime dignissimos nobis delectus, facere, earum exercitationem ad nesciunt perspiciatis id dolor deleniti ipsa itaque corporis beatae cumque! Aspernatur ex dolore vel error voluptatem dolorem excepturi nemo sit inventore. Fugit quod quidem velit quia nemo iure expedita doloribus corrupti a placeat.</p>
     
 </body>
 </html>
